@startuml Model Component Diagram

skinparam class {
    BackgroundColor LightYellow
}

package "Model" {
    abstract class AbstractBook {
        # title: String
        # author: String
        # isbn: String
        # genre: String
        # rating: Integer
        # readingStatus: String
        + getters()
        + setters()
    }

    abstract class AbstractLibrary {
        # books: List<Book>
        + {abstract} getBookByIsbn(String): Book
        + {abstract} addBook(Book)
        + {abstract} removeBook(String)
        + {abstract} updateBook(String, Book)
        + getBooks(): List<Book>
        + setBooks(List<Book>)
    }

    class Book {
        + Book()
        + Book(title, author, isbn, genre, rating, status)
        + toString(): String
    }

    class Library {
        + Library()
        + Library(List<Book>)
        + getBookByIsbn(String): Book
        + addBook(Book)
        + removeBook(String)
        + updateBook(String, Book)
    }

    class SearchFilter {
        - searchTerm: String
        - searchByTitle: boolean
        - readingStatusFilter: String
        - minRating: Integer
        + SearchFilter(searchTerm: String, readingStatusFilter: String, minRating: Integer)
        + getSearchTerm()
        + isSearchByTitle()
        + getReadingStatusFilter()
        + getMinRating()
    }
}

' Relazioni
AbstractLibrary <|-- Library
AbstractBook <|-- Book
Library "1" *-- "0..*" Book : contiene
SearchFilter ..> Book : << filtra >>
AbstractLibrary o-- AbstractBook

@enduml

